# Cataclysm-Cleanwater-Bomb

./: .astylerc  .gitignore  CMakeLists.txt  Makefile  README.md  SYNC_EXCLUDED_PRS.md  record_session.bat
.deepcode/plans/: sim-render-decoupling-plan.md
.github/: comment-commands.yml  dependabot.yml  labeler.yml  pull_request_template.md  reviewers.yml
.github/ISSUE_TEMPLATE/: bug_report.yaml  config.yml  feature_request.yaml
.github/workflows/: build-translations.yml  compose-tilesets.yml  detect-translation-file-changes.yml  greet-first-time-comment.yml  matrix.yml  push-translation-template.yml  release-android-bundle.yaml  release.yml  request-review.yml  sdl3-matrix.yml  validate-github-config.yml
.tx/: config
android/: gradle.properties
android/app/: build.gradle
android/app/jni/: CMakeLists.txt
build-data/osx/: AppIcon.icns
build-scripts/: generate-release-notes.js  gha_compile_only.sh
data/: changelog.txt
data/core/: external_options.json  tips.json
data/credits/: en.credits  zh_CN.credits
data/json/: achievements.json  ammo_effects.json  bionics.json  climbing.json  conducts.json  construction_group.json  damage_types.json  effects.json  explosion_lights.json  flags.json  item_actions.json  materials.json  professions.json  starting_missions.json  traps.json  vehicle_palette.json  vehicle_part_locations.json
data/motd/: ar.motd  cs.motd  de.motd  el.motd  en.motd  es_AR.motd  es_ES.motd  fil_PH.motd  fr.motd  ga_IE.motd  hu.motd  id.motd  it_IT.motd  ja.motd  ko.motd  nb.motd  pl.motd  pt_BR.motd  ru.motd  tr.motd  uk_UA.motd  zh_CN.motd  zh_TW.motd
data/raw/: keybindings.json
data/title/: zh_CN.title
doc/JSON/: CLIMBING.md  EFFECT_ON_CONDITION.md  ITEM.md  JSON_FLAGS.md  JSON_INFO.md  JSON_INHERITANCE.md  MAGIC.md  NPCs.md  VITAMIN.md
doc/c++/: COMPILING.md
lang/: compile_mo.sh  discard_invalid_po.sh  extract_untranslated.sh  update_pot.sh  update_stats.sh
lang/string_extractor/: parse.py  parser.py
msvc-full-features/: Cataclysm-common.props  Cataclysm-libAL-vcpkg-static.vcxproj  Cataclysm-libMZ-vcpkg-static.vcxproj  Cataclysm-test-vcpkg-static.vcxproj  Cataclysm-vcpkg-static.sln  Cataclysm-vcpkg-static.vcxproj  ImGui-lib-vcpkg-static.vcxproj  vcpkg.json
src/: CMakeLists.txt  achievement.cpp  action.cpp  action.h  active_item_cache.cpp  activity_actor.cpp  activity_actor_definitions.h  activity_handlers.cpp  activity_item_handling.cpp  activity_tracker.cpp  advanced_inv.cpp  advanced_inv_area.cpp  advanced_inv_listitem.cpp  advanced_inv_listitem.h  advanced_inv_pane.cpp  all_enum_values.h  ammo_effect.cpp  anatomy.cpp  animation.cpp  armor_layers.cpp  auto_note.cpp  auto_pickup.cpp  auto_pickup.h  avatar.cpp  avatar_action.cpp  ballistics.cpp  basecamp.cpp  behavior.cpp  behavior_oracle.h  behavior_strategy.cpp  bionics.cpp  bionics_ui.cpp  bodygraph.cpp  bodypart.cpp  bonuses.cpp  butchery.cpp  butchery_requirements.cpp  cached_options.cpp  cached_options.h  cata_allocator.cpp  (+444 more)
src/chkjson/: chkjson.cpp
tests/: act_build_test.cpp  activity_scheduling_helper.cpp  advanced_inventory_test.cpp  behavior_test.cpp  bionics_test.cpp  char_biometrics_test.cpp  char_suffer_test.cpp  char_volume_test.cpp  clzones_test.cpp  colony_test.cpp  connect_rotate_test.cpp  craft_attention_test.cpp  crafting_test.cpp  creature_test.cpp  effect_test.cpp  eoc_test.cpp  explosion_light_test.cpp  flat_set_test.cpp  generic_factory_test.cpp  ground_destroy_test.cpp  harvest_test.cpp  hash_test.cpp  invlet_test.cpp  item_autopickup_test.cpp  item_pocket_test.cpp  item_tname_test.cpp  item_wakeup_test.cpp  iteminfo_test.cpp  json_test.cpp  list_test.cpp  magic_spell_effect_test.cpp  map_bash_test.cpp  map_memory_test.cpp  map_path_test.cpp  map_test_case.cpp  map_test_case.h  monster_ai_determinism_test.cpp  monster_test.cpp  morale_test.cpp  nest_conditional_placement_test.cpp  (+34 more)
tools/: density_audit.py  gen_excel_v3.py  generate_icons.py  replay_ab.py  sort_sprites.py
(+264 files in other folders)
